RESOLVED FIXED148318
Web Inspector: arrow function names are never inferred, call frames are labeled (anonymous function)
https://bugs.webkit.org/show_bug.cgi?id=148318
Summary Web Inspector: arrow function names are never inferred, call frames are label...
Blaze Burg
Reported 2015-08-21 12:02:05 PDT
Created attachment 259638 [details] Test case In a simple case like let a = () => {} JSC should be able to infer this function's name as 'a'.
Attachments
Test case (315 bytes, text/html)
2015-08-21 12:02 PDT, Blaze Burg
no flags
Current call frames appearance in inspector. (182.47 KB, image/png)
2015-08-21 12:04 PDT, Blaze Burg
no flags
Patch (1.72 KB, patch)
2015-09-21 08:19 PDT, GSkachkov
no flags
Fixed_version (80.90 KB, image/png)
2015-09-21 12:00 PDT, GSkachkov
no flags
Radar WebKit Bug Importer
Comment 1 2015-08-21 12:02:53 PDT
Blaze Burg
Comment 2 2015-08-21 12:04:50 PDT
Created attachment 259640 [details] Current call frames appearance in inspector.
GSkachkov
Comment 3 2015-09-21 04:35:21 PDT
As I understand this is related to the SetFunctionName operation described in ES6 specification http://www.ecma-international.org/ecma-262/6.0/#sec-setfunctionname So arrow function should support name property. let a = () => {}; a.name === 'a'; //TRUE
GSkachkov
Comment 4 2015-09-21 07:13:00 PDT
Ohh I see that there is used anther property inferredName.
GSkachkov
Comment 5 2015-09-21 08:19:25 PDT
Created attachment 261656 [details] Patch Tiny fix, but need a lot of time until I can check it in Web Inspector because of the long build
GSkachkov
Comment 6 2015-09-21 12:00:39 PDT
Created attachment 261673 [details] Fixed_version Looks like fixed
Saam Barati
Comment 7 2015-09-21 12:02:16 PDT
Comment on attachment 261656 [details] Patch r=me I like one line bug fixes.
WebKit Commit Bot
Comment 8 2015-09-21 12:12:00 PDT
Comment on attachment 261656 [details] Patch Clearing flags on attachment: 261656 Committed r190066: <http://trac.webkit.org/changeset/190066>
WebKit Commit Bot
Comment 9 2015-09-21 12:12:09 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.