Web Inspector: arrow function names are never inferred, call frames are labeled (anonymous function) https://bugs.webkit.org/show_bug.cgi?id=148318

Patch by Aleksandr Skachkov <gskachkov@gmail.com> on 2015-09-21
Reviewed by Saam Barati.

Tiny change to support of the inferred name in arrow function

* parser/ASTBuilder.h:
(JSC::ASTBuilder::createAssignResolve):

Canonical link: https://commits.webkit.org/167498@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@190066 268f45cc-cd09-0410-ab3c-d52691b4dbfc